# what-town-two-words

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
data/demo/: os_names.csv  word_scores.json
data/parsed/: README.md  scowl_words.txt
tests/: test_codec.py  test_ingest.py  test_kaikki.py
what_town_two_words/: __init__.py  cli.py  codec.py  filters.py  ingest.py  lexicon.py  ollama.py
what_town_two_words/data/: british_towns.txt  profanity.txt  words.txt
