[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "what-town-two-words"
version = "0.1.0"
description = "Local town.word.word geocodes built from filtered word lists and British town names."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Matteo Ferla" }]
dependencies = []

[project.optional-dependencies]
phonetics = [
  "pronouncing>=0.2.0",
  "Metaphone>=0.6",
]
dev = [
  "pytest>=8",
]

[project.scripts]
what-town-two-words = "what_town_two_words.cli:main"

[tool.setuptools]
packages = ["what_town_two_words", "what_town_two_words.data"]

[tool.setuptools.package-data]
what_town_two_words = ["data/*.txt"]
